Migrate to Java 19