@@ -14,16 +14,15 @@ loom {
     runs {
         testC2MEServer {
             server()
-            runDir getRootProject().getProjectDir().toPath().relativize(project.getBuildDir().toPath()).resolve("testServer").toString()
+            runDir project.getProjectDir().toPath().relativize(project.getBuildDir().toPath()).resolve("testServer").toString()
             source sourceSets.testmod
             vmArgs "-Dc2me.base.config.override.ioSystem.replaceImpl=true",
                     "-Dc2me.base.config.override.asyncScheduling.enabled=true",
                     "-Dcom.ishland.c2me.mixin.doAudit=true",
                     "--add-modules",
                     "jdk.incubator.vector",
-                    "--enable-native-access=ALL-UNNAMED",
-                    "--add-modules",
-                    "jdk.incubator.foreign"
+                    "--enable-preview",
+                    "--enable-native-access=ALL-UNNAMED"
             if (System.getenv("GITHUB_WORKFLOW") != null) {
                 if (System.getenv("RUNNER_OS").equals("macOS")) {
                     vmArgs "-Xmx11G"
